# docstring-parser

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docstring-parser/: index.html
lark-docstring-parser/: index.html
mkdocs/: docstring-parser.md  index.md  lark-docstring-parser.md  numpydoc.md  pdoc3-parser.md  prerequisites.md  sphinx-napoleon.md
numpydoc/: index.html
pdoc3-parser/: index.html
prerequisites/: index.html
search/: search_index.json
sphinx-napoleon/: index.html
src/: hand_written_parser.py  lark_docstring_parser.py  pdoc3_docstring_parser.py
tests/: pdoc3_generated.html  test_docstring_parser.py  test_hand_written_parser.py  test_lark_docstring_parser.py  test_numpydoc.py  test_pdoc3_docstring_parser.py  test_pdoc3_parser.py  test_sphinx_napoleon.py
