[tool.poetry]
name = "docstring-parser-demo"
version = "0.1.0"
description = ""
authors = ["Gerrit Schrader <gerrit.schrader@vodafone.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lark = "^0.11.1"
numpydoc = "^1.1.0"
sphinxcontrib-napoleon = "^0.7"
docstring-parser = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "6.*"
black = "^20.8b1"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
